# hmi-clean-ls

./: LICENSE.md  README.md  clean_data.py  setup.cfg  setup.py
src/: __init__.py  globalvars.py  hmi_clean.py
