[metadata]
name = hmi_clean
version = 0.5
author = Samarth Ganesh Kashyap
author_email = g.samarth@tifr.res.in
description = Preparing HMI Dopplergram data for convection studies
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samarth-kashyap/hmi-clean-ls
license = MIT License
project_urls =
#    Documentation = https://ritzLavelyPy.readthedocs.io/en/latest/
#    TravisCI = https://travis-ci.com/github/samarth-kashyap/ritzLavelyPy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = Python, Solar-physics, HMI, Convection

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    astropy
	sunpy
# tests_require = pytest

[options.packages.find]
where = src